Fix Pave logo alignment

--- a/source/stylesheets/modules/_tuition.css.sass
+++ b/source/stylesheets/modules/_tuition.css.sass
@@ -92,18 +92,23 @@
     .total
       color: $blue
 
-  .financing-options,
+  .financing-options
+    margin-top: 55px
+    margin-bottom: 55px
+
+    .graphs
+      .earnest,
+      .climb,
+      .affirm,
+      .pave
+        height: 35px
+        max-width: 100%
+        margin: 10px 15px 10px
+
   .alternative-in-house-financing,
   .tuition-guarantee
     margin-top: 55px
     margin-bottom: 55px
-
-    .earnest,
-    .climb,
-    .affirm
-      height: 50px
-      max-width: 100%
-      margin: 10px 30px 20px
 
   .deferment
     margin-bottom: 20px
